Generating page structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,41 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    
+    <div class="container">
+        <!-- Header -->
+        <div class="header">Header</div>
+
+
+
+
+
+        <!-- Main-body -->
+        <div class="main-content">Main-body</div>
+
+
+        <!-- Sidebar -->
+        <div class="sidebar">
+            <div class="dashboard-display">DashBoard</div>
+            <!-- Primary buttons -->
+            <div class="primary-links">
+                <ul>
+                    <li>Home</li>
+                    <li>Profile</li>
+                    <li>Messages</li>
+                    <li>History</li>
+                    <li>Tasks</li>
+                    <li>Communties</li>
+                </ul>
+                <ul>
+                    <li>Settings</li>
+                    <li>Support</li>
+                    <li>Privacy</li>
+                </ul>
+            </div>
+            <div class="secondary-links"></div>
+        </div>
+
+
+    </div>
 </body>
 </html>
