Progress on header section

--- a/index.html
+++ b/index.html
@@ -9,9 +9,28 @@
 <body>
     <div class="container">
         <!-- Header -->
-        <div class="header">Header</div>
-
-
+        <div class="header">
+           <div class="search-wrapper">
+               <img class="s-button" src="assets/svg/magnify.svg" alt="">
+               <input class="search-bar" type="search">
+           </div>
+           <div class="header-top-right-wrapper">
+               <img src="assets/svg/bell-ring-outline.svg" alt="" class="bell">
+               <img src="assets/images/panda.png" alt="" class="avatar-small">
+               <div>Christian Fontanez</div>
+           </div>
+           <div class="header-bottom-left-wrapper">
+               <img src="assets/images/panda.png" alt="" class="avatar-large">
+               <div>Hi, there</div>
+               <div>Christian Fontanez</div>
+           </div>
+           <div class="header-bottom-right-wrapper">
+               <div>new</div>
+               <div>upload</div>
+               <div>share</div>
+           </div>
+        </div>
+           
 
 
 
@@ -21,9 +40,9 @@
 
         <!-- Sidebar -->
         <div class="sidebar">
-            <div class="dashboard-display">DashBoard</div>
             <!-- Primary buttons -->
             <div class="primary-links">
+                <ul class="dashboard-header">Dashboard</ul>
                 <ul>
                     <li>Home</li>
                     <li>Profile</li>
