More header module improvments

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
            </div>
            <div class="header-bottom-left-wrapper">
                <img src="assets/images/panda.png" alt="" class="avatar-large">
-               <div>Hi, there</div>
-               <div>Christian Fontanez</div>
+               <div class="greeting">Hi there,</div>
+               <div class="name-large">Christian Fontanez</div>
            </div>
            <div class="header-bottom-right-wrapper">
                <div>new</div>
