Lining up header segments

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
            <div class="header-top-right-wrapper">
                <img src="assets/svg/bell-ring-outline.svg" alt="" class="bell">
                <img src="assets/images/panda.png" alt="" class="avatar-small">
-               <div>Christian Fontanez</div>
+               <div class="name-small">Christian Fontanez</div>
            </div>
            <div class="header-bottom-left-wrapper">
                <img src="assets/images/panda.png" alt="" class="avatar-large">
                <div class="greeting">Hi there,</div>
-               <div class="name-large">Christian Fontanez</div>
+               <div class="name-large">Christian Fontanez (@cfontanez)</div>
            </div>
            <div class="header-bottom-right-wrapper">
-               <div>new</div>
-               <div>upload</div>
-               <div>share</div>
+               <button class="header-button" type="button">New</button>
+               <button class="header-button" type="button">Upload</button>
+               <button class="header-button" type="button">Share</button>
            </div>
         </div>
            
