--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                <div class="name-large">Christian Fontanez (@cfontanez)</div>
            </div>
            <div class="header-bottom-right-wrapper">
-               <button class="header-button" type="button">New</button>
-               <button class="header-button" type="button">Upload</button>
-               <button class="header-button" type="button">Share</button>
+               <button class="btn" type="button">New</button>
+               <button class="btn" type="button">Upload</button>
+               <button class="btn" type="button">Share</button>
            </div>
         </div>
            
