Linked sidebar icons

--- a/index.html
+++ b/index.html
@@ -31,6 +31,29 @@
            </div>
         </div>
            
+        <!-- Sidebar -->
+        <div class="sidebar">
+            <!-- Primary buttons -->
+            <div class="primary-links">
+                <ul class="dashboard-header">Dashboard</ul>
+                <ul>
+                    <li><img src="assets/svg/home.svg" alt="" class="sidebar-icon">Home</li>
+                    <li><img src="assets/svg/card-account-details.svg" alt="" class="sidebar-icon">Profile</li>
+                    <li><img src="assets/svg/message.svg" alt="" class="sidebar-icon">Messages</li>
+                    <li><img src="assets/svg/clock-time-nine-outline.svg" alt="" class="sidebar-icon">History</li>
+                    <li><img src="assets/svg/format-list-checks.svg" alt="" class="sidebar-icon">Tasks</li>
+                    <li><img src="assets/svg/account-group.svg" alt="" class="sidebar-icon">Communties</li>
+                </ul>
+                <ul>
+                    <li><img src="assets/svg/cog.svg" alt="" class="sidebar-icon">Settings</li>
+                    <li><img src="assets/svg/help-box.svg" alt="" class="sidebar-icon">Support</li>
+                    <li><img src="assets/svg/shield-account.svg" alt="" class="sidebar-icon">Privacy</li>
+                </ul>
+            </div>
+            <div class="secondary-links"></div>
+        </div>
+
+
 
 
 
@@ -38,27 +61,7 @@
         <div class="main-content">Main-body</div>
 
 
-        <!-- Sidebar -->
-        <div class="sidebar">
-            <!-- Primary buttons -->
-            <div class="primary-links">
-                <ul class="dashboard-header">Dashboard</ul>
-                <ul>
-                    <li>Home</li>
-                    <li>Profile</li>
-                    <li>Messages</li>
-                    <li>History</li>
-                    <li>Tasks</li>
-                    <li>Communties</li>
-                </ul>
-                <ul>
-                    <li>Settings</li>
-                    <li>Support</li>
-                    <li>Privacy</li>
-                </ul>
-            </div>
-            <div class="secondary-links"></div>
-        </div>
+        
 
 
     </div>
