Lined sidebar vertically, and spaced out text

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="sidebar">
             <!-- Primary buttons -->
             <div class="primary-links">
-                <ul class="dashboard-header">Dashboard</ul>
+                <h3 class="dashboard-header"><img src="assets/svg/view-dashboard.svg" alt="" class="dashboard-header-icon">Dashboard</h3>
                 <ul>
                     <li><img src="assets/svg/home.svg" alt="" class="sidebar-icon">Home</li>
                     <li><img src="assets/svg/card-account-details.svg" alt="" class="sidebar-icon">Profile</li>
