--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
         <div class="sidebar">
             <!-- Primary buttons -->
             <div class="primary-links">
-                <h3 class="dashboard-header"><img src="assets/svg/view-dashboard.svg" alt="" class="dashboard-header-icon">Dashboard</h3>
+                <div class="dashboard-header-container">
+                    <img src="assets/svg/view-dashboard.svg" alt="" class="dashboard-header-icon">
+                    <h3 class="dashboard-header">Dashboard</h3>
+                </div>
                 <ul>
                     <li><img src="assets/svg/home.svg" alt="" class="sidebar-icon">Home</li>
                     <li><img src="assets/svg/card-account-details.svg" alt="" class="sidebar-icon">Profile</li>
