Announcements box complete

--- a/index.html
+++ b/index.html
@@ -124,11 +124,13 @@
                 <div class="nested-side-grid">
                     <div class="announcements-container">
                         <h3 class="card-header">Site Maintenance</h3>
-                        <p class="cardbody">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea aliquam quidem, quod fuga error magnam a fugiat recusandae ullam</p>
+                        <p class="cardbody">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea aliquam quidem, quod fuga </p>
+                        <div class="silver-strip"></div>
                         <h3 class="card-header">Community Share Day</h3>
-                        <p class="cardbody">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea aliquam quidem, quod fuga error magnam a fugiat recusandae ullam</p>
+                        <p class="cardbody">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea aliquam quidem, quod </p>
+                        <div class="silver-strip"></div>
                         <h3 class="card-header">Upload Privacy Policy</h3>
-                        <p class="cardbody">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea aliquam quidem, quod fuga error magnam a fugiat recusandae ullam</p>
+                        <p class="cardbody">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea aliquam quidem, quod fuga </p>
                     </div>
                     <!-- Trending box -->
                     <div class="trending">
