Trending box done

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                         <p class="cardbody">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea aliquam quidem, quod fuga </p>
                     </div>
                     <!-- Trending box -->
+                    <div class="trending-header">Trending</div>
                     <div class="trending">
                         
                         <img src="assets/images/bill-cypher-pfp.jpg" alt="" class="trending-avatar-small">
